Update java version, dependencies and general cleanup